--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mongoose": "^5.2.3"
+    "mongoose": "^5.2.3",
+    "utility": "^1.14.0"
   }
 }
