--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "mongoose": "^5.2.3",
+    "superagent": "^3.8.3",
     "utility": "^1.14.0"
   }
 }
